/* 
  Localizable.strings
  Luna

  Created by Admin on 10/06/21.
  
*/
"signInWithFaceID" = "Sign In with Face ID";
"signInWithFingerPrint" = "Sign In with Fingerprint";
"invalidBiometrics" = "Invalid biometric input";
"lockedOutBiometric" = "Biometric locked out";
"loginError" = "Your biometric is not associated with any account";
"biometricAuthNotAvailable" = "Your device doesn't support biometric authentication";
"overrideBioMetricMessage" = "Your biometric is already associated with one account. Do you want to replace your biometric with this account?";
"error" = "Error!";
"biometric" = "Biometric";
"alreadyHaveAnAccount" = "Already have an account ? ";
"login" = "Login";
"signup" = "Sign Up";
"please_create_account_to_get_good_sleep" = "Please create account to get good night's sleep";
"please_login_to_get_good_sleep" = "Please login to get good night's sleep";
"dont_have_an_account" = "Don’t have an account ? ";
"password" = "Password";
"emailId" = "Email";
"allowFaceId" = "Allow Face ID";
"allowTouchId" = "Allow Touch ID";
"faceID" = "Face ID";
"touchID" = "Touch ID";
"email_verification" = "Email Verification";
"please_check_your_emai_A_verification_link_has_been_sent_to_your_registered_email_account" = "Please check your email - A verification link has been sent to your registered email account.";
"pair_luna" = "Pair Luna";
"link_cgm" = "Link CGM";
"insulin_info" = "Insulin Information";
 "luna_Device_Paired" = "Luna Device Paired";
"about_5_minutes_to_complete" = "About 5 minutes to complete";
"step" = "STEP";
"per_day" = "per day";
"start" = "Start";
"start_date" = "Start Date";
"end_date" = "End Date";
"edit" = "Edit";
"done" = "Done";
"select" = "Select";

"change_Long_Acting_Insulin" = "Long-Acting Insulin";
"change_CGM" = "CGM";
"change_connected_Luna_Device" = "Luna Controller";
"alerts" = "Alerts";
"explainer_what_they_do" = "Explainer what they do";
"choosePdf" = "Choose Pdf";

"how_to_charge_Luna" = "How to charge Luna?";
"how_to_pair_Luna" = "How to pair Luna?";
"how_to_fill_and_apply_your_Insulin" = "How to fill and apply your Insulin";
"how_to_connect_your_CGM" = "How to connect your CGM?";

"profile" = "Profile";
"myProfile" = "My Profile";
"change_Password" = "Change Password";
"face_ID" = "Face ID";
"apple_Health" = "Apple Health";
"luna" = "Luna";
"luna_settings" = "Luna Settings";
"app_settings" = "App Settings";
"about" = "About";
"delete_Account" = "Delete Account";
"logout" = "Logout";
"touch_ID" = "Touch ID";
"are_you_sure_want_to_delete_account" = "Are you sure want to delete account?";
"are_you_sure_want_to_logout" = "Are you sure want to logout?";
"are_you_sure_want_to_logout_from_dexcom" = "Are you sure want to logout from Dexcom?";
"cgm_connected" = "CGM is connected";
"connect_cgm" = "Connect your CGM";
"pair_cgm_simulator" = "Pair CGM Simulator";
"next" = "Next";
"no" = "No";
"yes" = "Yes";

"first_Name" = "First Name";
"last_Name" = "Last Name";
"date_Of_Birth" = "Date Of Birth";
"email" = "Email";
"diabetes_Type" = "Diabetes Type";

"old_password" = "Old Password";
"new_password" = "New Password";
"confirm_password" = "Confirm Password";

"find_Answers" = "Find Answers";
"customer_Support" = "Customer Support";
"app_Version" = "App Version";
"terms_Conditions" = "Terms & Conditions";
"privacy" = "Privacy";

"lOGIN_TO_LUNA" = "LOGIN TO LUNA";
"password_Reset" = "Password Reset";
"reset_password_link_sent" = "Reset password link has been shared on your registered email. Check and create new password";
"email_Verification" = "Email Verification";
"please_check_your_email_sent" = "Please check your email - A verification link has been sent to your registered email account.";

"sender" = "Sender";
"receiver" = "Receiver";
"decision" = "Decision";
"type" = "Type";
"do_not_Allow" = "Don’t Allow";
"allow" = "Allow";

"faceID_Touch_ID_may_not_be_available_or_configured" = "Face ID/Touch ID may not be available or configured";
"what_is_your_first_name" = "What is your first name?";
"hello_and_welcome_to_Luna" = "Welcome to Luna, to get you started we will ask you some questions about who you are. This is so we know who we are working with and personalizing the app for you. Data privacy is paramount to everything we do. We protect your data to the highest standards as required by HIPAA and won't sell it ever.";
"please_provide_your_details_to_set_up_your_profile" = "Please provide your details to set up your profile";
"what_your_date_of_birth" = "What’s your date of birth";

"type1" = "Type 1";
"type2" = "Type 2";

"dexcomG6" =  "Dexcom G6";
"dexcomG7" = "Dexcom G7";
"freestyle_Libre2" = "Freestyle Libre 2";
"freestyle_Libre3" = "Freestyle Libre 3";
"lunaSimulator" = "Luna CGM Simulator";

"battery" = "Battery";
"reservoir" = "Reservoir";
"system" = "System";
"logout_From_Dexcom" = "Dexcom logout";

"old_password_must_contain_at_least_char" = "Old password must contain at least 6 char.";
"new_password_must_contain_at_least_char" = "New password must contain at least 6 char.";
"confirm_password_must_contain_at_least_char" = "Confirm password must contain at least 6 char.";
"new_and_confirm_password_doesnt_match" = "New and confirm password doesn't match.";

"minutesAgo" = "Minutes Ago";
"oneMinuteAgo" = "1 Minutes Ago";
"oneHourAgo" = "1 Hours Ago";
"hoursAgo" = "Hours Ago";
"daysAgo" = "Days Ago";
"lastWeek" = "Last Week";
"secondsAgo" = "Seconds Ago";
"weeksAgo" = "Weeks Ago";
"lastMonth" = "Last Month";
"monthsAgo" = "Months Ago";
"lastYear" = "Last Year";

"Connecting to %@" = "Connecting to %@";
"Connected to %@" = "Connected to %@";
"Failed to connect to %@" = "Failed to connect to %@";
"disconnect" = "Disconnect";
"failedToDisconnect" = "Failed to disconnect";
"pleaseTryAgain" = "Please try again";
"dismiss" = "Dismiss";
"Cancel" = "Cancel";
"close" = "Close";
"mg/dl" = "mg/dl";
"pairLunaCgmSimExplanation" = "To pair your Luna CGM Simulator, enable the simulator on your mac or iOS device";
"no_session_history_data_available" = "No Session History data available.";
"no_notification_data_available" = "No Notification data available.";
