...
                                                <rect key="frame" x="0.0" y="193.5" width="374" height="44"/>
                                                <color key="backgroundColor" red="0.52941176469999995" green="0.74509803919999995" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="LAL-eU-LTI"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="16"/>
                                                <state key="normal" title="Confirm">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="confirmEmailAction:" destination="H8n-Fy-8bq" eventType="touchUpInside" id="d4c-eh-0Ik"/>
                                                </connections>
                                            </button>
...
